--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -4,7 +4,7 @@
 <li><a href="../Preferences_Editor.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Preferences Editor (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Se&ccedil;enekler Penceresi (5% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de preferencias (11% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="R&eacute;glage des pr&eacute;f&eacute;rences (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--complete" title="R&eacute;glage des pr&eacute;f&eacute;rences (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Ure&#273;iva&#269; postavki (3% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--med" title="Impostare le preferenze (49% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--complete" title="Edytor ustawie&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
@@ -1243,7 +1243,7 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../bg/Getting_started.html" title="Getting started/bg">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../bg/Download.html" title="Download/bg">Download</a>, <a href="../bg/Installing_on_Windows.html" title="Installing on Windows/bg">Windows</a>, <a href="../bg/Installing_on_Linux.html" title="Installing on Linux/bg">Linux</a>, <a href="../bg/Installing_on_Mac.html" title="Installing on Mac/bg">Mac</a>, <a href="../bg/Installing_additional_components.html" title="Installing additional components/bg">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/bg (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/bg&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/bg (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/bg (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../bg/About_FreeCAD.html" title="About FreeCAD/bg">About FreeCAD</a>, <a href="../index.php?title=Interface/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/bg (page does not exist)">Interface</a>, <a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/bg (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/bg (page does not exist)">Object name</a>, <a class="mw-selflink selflink">Preferences</a>, <a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>, <a href="../bg/Document_structure.html" title="Document structure/bg">Document structure</a>, <a href="../index.php?title=Property/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property/bg (page does not exist)">Properties</a>, <a href="../bg/Help_FreeCAD.html" title="Help FreeCAD/bg">Help FreeCAD</a>, <a href="../index.php?title=Donate/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/bg (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../bg/About_FreeCAD.html" title="About FreeCAD/bg">About FreeCAD</a>, <a href="../bg/Interface.html" title="Interface/bg">Interface</a>, <a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/bg (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/bg (page does not exist)">Object name</a>, <a class="mw-selflink selflink">Preferences</a>, <a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>, <a href="../bg/Document_structure.html" title="Document structure/bg">Document structure</a>, <a href="../index.php?title=Property/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property/bg (page does not exist)">Properties</a>, <a href="../bg/Help_FreeCAD.html" title="Help FreeCAD/bg">Help FreeCAD</a>, <a href="../index.php?title=Donate/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/bg (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../bg/Tutorials.html" title="Tutorials/bg">Tutorials</a>, <a href="../index.php?title=Video_tutorials/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Video tutorials/bg (page does not exist)">Video tutorials</a></li>
 <li><b><a href="../bg/Workbenches.html" title="Workbenches/bg">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/bg (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/bg (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/bg (page does not exist)">BIM</a>, <a href="../index.php?title=CAM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="CAM Workbench/bg (page does not exist)">CAM</a>, <a href="../bg/Draft_Workbench.html" title="Draft Workbench/bg">Draft</a>, <a href="../index.php?title=FEM_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="FEM Workbench/bg (page does not exist)">FEM</a>, <a href="../index.php?title=Inspection_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Inspection Workbench/bg (page does not exist)">Inspection</a>, <a href="../index.php?title=Material_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/bg (page does not exist)">Material</a>, <a href="../bg/Mesh_Workbench.html" title="Mesh Workbench/bg">Mesh</a>, <a href="../index.php?title=OpenSCAD_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="OpenSCAD Workbench/bg (page does not exist)">OpenSCAD</a>, <a href="../index.php?title=Part_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Part Workbench/bg (page does not exist)">Part</a>, <a href="../bg/PartDesign_Workbench.html" title="PartDesign Workbench/bg">PartDesign</a>, <a href="../index.php?title=Points_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Points Workbench/bg (page does not exist)">Points</a>, <a href="../index.php?title=Reverse_Engineering_Workbench/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Reverse Engineering Workbench/bg (page does not exist)">Reverse Engineering</a>, <a href="../bg/Robot_Workbench.html" title="Robot Workbench/bg">Robot</a>, <a href="../bg/Sketcher_Workbench.html" title="Sketcher Workbench/bg">Sketcher</a>, <a href="../bg/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/bg">Spreadsheet</a>, <a href="../bg/Surface_Workbench.html" title="Surface Workbench/bg">Surface</a>, <a href="../bg/TechDraw_Workbench.html" title="TechDraw Workbench/bg">TechDraw</a>, <a href="../index.php?title=Testing/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/bg (page does not exist)">Test Framework</a></li></ul>
@@ -1254,35 +1254,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112174737
+Cached time: 20260118050125
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.208 seconds
-Real time usage: 0.398 seconds
+CPU time usage: 0.220 seconds
+Real time usage: 0.262 seconds
 Preprocessor visited node count: 2475/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4104/5000000 bytes
+Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   98.924      1 -total
- 23.93%   23.670      1 Template:Userdocnavi/bg
-  9.06%    8.962     11 Template:Value
-  8.52%    8.429     15 Template:FileName
-  7.92%    7.839    228 Template:MenuCommand
-  6.92%    6.843      1 Template:Navigation_menu_2
-  6.83%    6.760     11 Template:Incode
-  6.38%    6.312      2 Template:VersionMinus
-  4.14%    4.097      3 Template:PropertyView
-  3.16%    3.123      2 Template:Docnav
+100.00%   40.646      1 -total
+ 16.02%    6.512    228 Template:MenuCommand
+ 10.99%    4.469      1 Template:Userdocnavi/bg
+  8.60%    3.497      3 Template:PropertyView
+  7.14%    2.901     11 Template:Value
+  5.16%    2.097     42 Template:Version
+  4.82%    1.961      2 Template:Docnav
+  4.65%    1.892      1 Template:Navigation_menu_2
+  4.04%    1.641      3 Template:Variable
+  3.08%    1.252     11 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174736 and revision id 1737610. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260118050125 and revision id 1737610. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
