--- a/wiki/Project_template.html
+++ b/wiki/Project_template.html
@@ -23,12 +23,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117155014
+Cached time: 20260118050128
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.006 seconds
-Real time usage: 0.007 seconds
+CPU time usage: 0.008 seconds
+Real time usage: 0.009 seconds
 Preprocessor visited node count: 20/1000000
 Post&#8208;expand include size: 30/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -39,11 +39,11 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    1.080      1 Template:Clear
-100.00%    1.080      1 -total
+100.00%    1.767      1 Template:Clear
+100.00%    1.767      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394-0!canonical and timestamp 20260117155109 and revision id 1739601. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:394-0!canonical and timestamp 20260118050128 and revision id 1739601. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
