--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -176,7 +176,6 @@ Makro ArbeitsFunktionen
 <li><b>Drehfeld</b>&nbsp;: Den Abstandswert eingeben.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Object(s) Center Planes</span>&nbsp;: Erstellt drei Ebenen (XY, XZ und YZ) an der Mitte aller ausgew&auml;hlten Objekte.</li></ul>
 </td></tr></tbody></table>
-<div class="mw-translate-fuzzy">
 <p><b>Reiter Objects</b> (Objekte)
 </p>
 <table>
@@ -187,10 +186,9 @@ Makro ArbeitsFunktionen
 <ul><li><b>Reiter Objects</b> (Objekte)</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box(es)</span>&nbsp;: Erstellt Begrenzungsrahmen um jedes ausgew&auml;hlte Objekt.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Bounding Box</span>&nbsp;: Erstellt einen Begrenzungsrahmen um alle ausgew&auml;hlten Objekte.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder</span>&nbsp;: Zun&auml;chst eine Achse und einen Punkt ausw&auml;hlen. Bei Bedarf Durchmesser und L&auml;nge festlegen. Dann auf die Schaltfl&auml;che ... klicken. Es wird ein Zylinder erstellt, der an der ausgew&auml;hlten Achse ausgerichtet ist. Eines der Enden befindet sich am ausgew&auml;hlten Punkt.</li>
-<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cube</span>&nbsp;: Zun&auml;chst eine Achse und einen Punkt ausw&auml;hlen. Bei Bedarf die Abmessungen festlegen. Dann auf die Schaltfl&auml;che ... klicken. Dadurch wird ein Quader erstellt, der an der ausgew&auml;hlten Achse ausgerichtet ist. Eine der Ecken befindet sich an dem ausgew&auml;hlten Punkt.</li></ul>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cylinder</span>&nbsp;: Zun&auml;chst eine Achse und einen Punkt ausw&auml;hlen. Bei Bedarf Durchmesser und L&auml;nge festlegen. Dann auf die Schaltfl&auml;che '...' klicken. Es wird ein Zylinder erstellt, der an der ausgew&auml;hlten Achse ausgerichtet ist. Eines der Enden befindet sich am ausgew&auml;hlten Punkt.</li>
+<li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Cube</span>&nbsp;: Zun&auml;chst eine Achse und einen Punkt ausw&auml;hlen. Bei Bedarf die Abmessungen festlegen. Dann auf die Schaltfl&auml;che '...' klicken. Dadurch wird ein Quader erstellt, der an der ausgew&auml;hlten Achse ausgerichtet ist. Eine der Ecken befindet sich an dem ausgew&auml;hlten Punkt.</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><b>Reiter Views</b> (Ansichten)
 </p>
 <table>
@@ -457,13 +455,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118053341
+Cached time: 20260118053423
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.157 seconds
-Real time usage: 0.189 seconds
-Preprocessor visited node count: 675/1000000
+CPU time usage: 0.136 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 674/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
 Highest expansion depth: 5/100
@@ -473,18 +471,18 @@ Unstrip post&#8208;expand size: 21859/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   89.432      1 -total
-  4.89%    4.373      1 Template:Userdocnavi/de
-  4.46%    3.992      1 Template:Macro/de
-  3.57%    3.195     54 Template:KEY
-  2.41%    2.151     11 Template:Clear
-  2.21%    1.978      1 Template:Caption
-  2.19%    1.957      1 Template:Navigation_menu_2
-  1.78%    1.590      1 Template:Button
-  1.64%    1.464      1 Template:MenuCommand
+100.00%   71.644      1 -total
+  4.74%    3.398      1 Template:Userdocnavi/de
+  4.18%    2.992      1 Template:Macro/de
+  3.74%    2.679     54 Template:KEY
+  2.18%    1.565     11 Template:Clear
+  2.12%    1.521      1 Template:Navigation_menu_2
+  2.07%    1.482      1 Template:Button
+  2.03%    1.457      1 Template:Caption
+  1.37%    0.978      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053341 and revision id 1739756. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053423 and revision id 1739758. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
