--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -262,11 +262,8 @@ muss die ZIP-Datei entpackt werden und alle Dateien in das Makroverzeichnis kopi
 </p>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_GitHub_00.png&amp;filetimestamp=20160917094640&amp;.html" class="mw-file-description" title="Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP"><img alt="Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP" src="../File/Macro_Work_Features_GitHub_00.png" decoding="async" width="640" height="415" class="mw-file-element" data-file-width="1060" data-file-height="687"></a><figcaption>Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP</figcaption></figure>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
 <p>Den <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Std_AddonMgr.html" title="Std AddonMgr/de">Addon-Manager</a> <b>Men&uuml; &rarr; Werkzeuge &rarr; Addon-Manager</b> zur einfachen Installation von ArbeitsFunktionen und anderen interessanten Makros verwenden.
-</p>
-</div>
-<p>Hier geht es zur ausf&uuml;hrlichen <a href="../de/How_to_install_macros.html" title="How to install macros/de">Anleitung zur Installation von Makros</a>.
+</p><p>Hier geht es zur ausf&uuml;hrlichen <a href="../de/How_to_install_macros.html" title="How to install macros/de">Anleitung zur Installation von Makros</a>.
 </p><p><span id="Examples"></span>
 </p>
 <h2><span class="mw-headline" id="Beispiele">Beispiele</span></h2>
@@ -449,13 +446,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118053504
+Cached time: 20260118053511
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.170 seconds
-Real time usage: 0.366 seconds
-Preprocessor visited node count: 672/1000000
+CPU time usage: 0.146 seconds
+Real time usage: 0.171 seconds
+Preprocessor visited node count: 671/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
 Highest expansion depth: 5/100
@@ -465,18 +462,18 @@ Unstrip post&#8208;expand size: 21859/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  206.703      1 -total
-  5.48%   11.318      1 Template:Macro/de
-  2.81%    5.800      1 Template:Userdocnavi/de
-  2.24%    4.627      1 Template:Button
-  2.23%    4.610     54 Template:KEY
-  2.05%    4.239      1 Template:Caption
-  1.55%    3.197     11 Template:Clear
-  1.24%    2.569      1 Template:MenuCommand
-  1.03%    2.135      1 Template:Navigation_menu_2
+100.00%   70.595      1 -total
+  5.03%    3.553      1 Template:Userdocnavi/de
+  4.84%    3.419      1 Template:Macro/de
+  3.87%    2.733     54 Template:KEY
+  2.34%    1.654     11 Template:Clear
+  1.81%    1.281      1 Template:Button
+  1.73%    1.223      1 Template:Caption
+  1.68%    1.185      1 Template:Navigation_menu_2
+  1.67%    1.182      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053504 and revision id 1739762. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053511 and revision id 1739764. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
