--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro WorkFeatures/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+WorkFeatures&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_WorkFeatures.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--high" title="Macro WorkFeatures (87% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--high" title="Macro WorkFeatures (87% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -409,12 +409,8 @@ Dicke ist die Breite der Schnittebene.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> 
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_centerObjectsPlanes.png&amp;filetimestamp=20141225171322&amp;.html" class="mw-file-description"><img src="../File/WF_centerObjectsPlanes.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Quellen&nbsp;:</b>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Auf GitHub&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
-</p>
-</div>
-<p>Datum 2019-05-01 (YYYY-MM-DD)
+</p><p>Auf GitHub&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
+</p><p>Datum 2019-05-01 (YYYY-MM-DD)
 </p><p>20/01/2019
 </p><p>08/03/2015&nbsp;: <a rel="nofollow" class="external text" href="http://github.com/Rentlau/WorkFeature.git">WF_2015_03_08</a>
 - Kreisschnitt hinzugef&uuml;gt
@@ -446,34 +442,34 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118053511
+Cached time: 20260118053522
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.146 seconds
-Real time usage: 0.171 seconds
-Preprocessor visited node count: 671/1000000
+CPU time usage: 0.140 seconds
+Real time usage: 0.164 seconds
+Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21859/5000000 bytes
+Unstrip post&#8208;expand size: 21863/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.595      1 -total
-  5.03%    3.553      1 Template:Userdocnavi/de
-  4.84%    3.419      1 Template:Macro/de
-  3.87%    2.733     54 Template:KEY
-  2.34%    1.654     11 Template:Clear
-  1.81%    1.281      1 Template:Button
-  1.73%    1.223      1 Template:Caption
-  1.68%    1.185      1 Template:Navigation_menu_2
-  1.67%    1.182      1 Template:MenuCommand
+100.00%   75.821      1 -total
+  4.11%    3.117      1 Template:Caption
+  4.07%    3.086      1 Template:Userdocnavi/de
+  3.98%    3.016      1 Template:Macro/de
+  3.82%    2.897     54 Template:KEY
+  2.41%    1.825     11 Template:Clear
+  1.67%    1.269      1 Template:Navigation_menu_2
+  1.64%    1.245      1 Template:Button
+  1.36%    1.032      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053511 and revision id 1739764. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053522 and revision id 1739766. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
