--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -250,11 +250,8 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 </p>
 <h2><span class="mw-headline" id="Skript">Skript</span></h2>
 <p><b>Macro_FCSpring_Helix_Variable.FCMacro</b>
+</p><p>Das Makro von Gist herunterladen. <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/68c81c32a0727a693d3a">Macro_FCSpring_Helix_Variable</a>
 </p>
-<div class="mw-translate-fuzzy">
-<p>Das Makro auf Gist herunterladen. <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/68c81c32a0727a693d3a">Macro_FCSpring_Helix_Variable</a>
-</p>
-</div>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <p>Die oben genannte Datei ist ein Makro in Form von GitHub-Code. Die Zip-Datei auf GitHub herunterladen und dann die Makro-Installationsanweisungen f&uuml;r Anf&auml;nger unter <a rel="nofollow" class="external text" href="https://wiki.opensourceecology.org/wiki/Installing_Macros_in_FreeCAD">installing FreeCAD macros in Ubuntu</a> befolgen.
 </p><p><span id="Examples"></span>
@@ -503,13 +500,13 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118053735
+Cached time: 20260118053746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.225 seconds
-Real time usage: 0.263 seconds
-Preprocessor visited node count: 947/1000000
+CPU time usage: 0.221 seconds
+Real time usage: 0.269 seconds
+Preprocessor visited node count: 946/1000000
 Post&#8208;expand include size: 24597/2097152 bytes
 Template argument size: 4659/2097152 bytes
 Highest expansion depth: 6/100
@@ -519,19 +516,19 @@ Unstrip post&#8208;expand size: 28753/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  109.622      1 -total
-  2.94%    3.218      6 Template:Code
-  2.85%    3.128      1 Template:Macro/de
-  2.42%    2.652     12 Template:SpinBox
-  2.32%    2.539      8 Template:CheckBox
-  2.15%    2.359      2 Template:RadioButton
-  2.14%    2.349      1 Template:Codeextralink
-  1.71%    1.876     25 Template:Button
-  1.27%    1.394     14 Template:Clear
-  1.19%    1.302      1 Template:Caption
+100.00%  114.200      1 -total
+  3.34%    3.815      6 Template:Code
+  3.14%    3.590      1 Template:Macro/de
+  2.97%    3.397      1 Template:Codeextralink
+  2.95%    3.367     12 Template:SpinBox
+  2.36%    2.695      8 Template:CheckBox
+  2.00%    2.284      2 Template:RadioButton
+  1.88%    2.148      1 Template:KEY
+  1.83%    2.089     25 Template:Button
+  1.66%    1.900      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053734 and revision id 1739776. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053746 and revision id 1739778. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
